--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
   provider: ^6.1.1
+  http: ^1.1.2
 
 dev_dependencies:
   flutter_test:
